DHCP fix, snooping fix

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -307,6 +307,24 @@
                 exit
             ip route 0.0.0.0 0.0.0.0 20.0.0.1
 
+        #DHCP
+            ip dhcp pool Szerver_felho
+                net 192.168.2.0 255.255.255.240
+                default-router 192.168.2.1
+                dns-server 8.8.8.8
+                exit
+            ip dhcp pool Adatbazis
+                net 192.168.2.16 255.255.255.248
+                default-router 192.168.2.17
+                dns-server 8.8.8.8
+                exit
+            ip dhcp pool Teszteles
+                net 192.168.2.32 255.255.255.240
+                default-router 192.168.2.33
+                dns-server 8.8.8.8
+                exit
+
+
         #NAT
             ip nat pool SITE2NAT 20.0.0.3 20.0.0.14 netmask 255.255.255.240
             ip nat inside source list 2 pool SITE2NAT overload
@@ -426,12 +444,10 @@
             ip route 0.0.0.0 0.0.0.0 192.168.2.250 2
 
         #DHCP
-            ip dhcp pool Teszteles
-                net 192.168.2.32 255.255.255.240
-                default-router 192.168.2.33
-                dns-server 8.8.8.8
+            int range g0/0,g0/1.50
+                ip helper-address 192.168.2.241
                 exit
-
+            
 
     #SITE2x2
         ena
@@ -504,10 +520,8 @@ Your compliance is mandatory.
             ip route 0.0.0.0 0.0.0.0 192.168.2.249 2
 
         #DHCP
-            ip dhcp pool Adatbazis
-                net 192.168.2.16 255.255.255.248
-                default-router 192.168.2.17
-                dns-server 8.8.8.8
+            int range g0/0,g0/2.50
+                ip helper-address 192.168.2.245
                 exit
 
     #SITE3
@@ -538,6 +552,11 @@ Your compliance is mandatory.
                 no sh
             int g0/1
                 no sh
+            int g0/1.6
+                encapsulation dot1q 6
+                ip add 192.168.3.41 255.255.255.252
+                no sh
+                exit
             int g0/1.70
                 encapsulation dot1q 70
                 ip add 192.168.3.33 255.255.255.248
@@ -556,11 +575,13 @@ Your compliance is mandatory.
                 default-router 192.168.3.33
                 dns-server 8.8.8.8
                 exit
+                
 
         #FORGALOMIRÁNYÍTÁS
             router ospf 1
                 router-id 3.0.0.0
                 passive-interface g0/1
+                passive-interface g0/1.6
                 passive-interface g0/1.70
                 passive-interface g0/0
             ip route 0.0.0.0 0.0.0.0 30.0.0.1
@@ -717,7 +738,7 @@ Your compliance is mandatory.
         #DHCP-snooping
             ip dhcp snooping
             ip dhcp snooping vlan 10,20,30,40,3,5,6
-            ip dhcp snooping information option allow-untrusted
+            no ip dhcp snooping information option
             interface GigabitEthernet0/1
                 ip dhcp snooping trust
                 exit
@@ -824,7 +845,7 @@ Your compliance is mandatory.
         #DHCP-snooping
             ip dhcp snooping
             ip dhcp snooping vlan 10,20,30,40,3,5,6
-            ip dhcp snooping information option allow-untrusted
+            no ip dhcp snooping information option
             interface GigabitEthernet0/1
                 ip dhcp snooping limit rate 50
                 exit
@@ -933,7 +954,7 @@ Your compliance is mandatory.
         #DHCP-snooping
             ip dhcp snooping
             ip dhcp snooping vlan 10,20,30,40,3,5,6
-            ip dhcp snooping information option allow-untrusted
+            no ip dhcp snooping information option
             int g0/1
                 ip dhcp snooping limit rate 20
                 exit
@@ -1022,12 +1043,15 @@ Your compliance is mandatory.
         #DHCP-snooping
             ip dhcp snooping
             ip dhcp snooping vlan 50,60
-            ip dhcp snooping information option allow-untrusted
+            no ip dhcp snooping information option
             int range fa0/1-14
                 ip dhcp snooping limit rate 28
                 exit
             int range fa0/15-16
                 ip dhcp snooping limit rate 4
+                exit
+            int range g0/1-2
+                ip dhcp snooping trust
                 exit
 
         #ARP inspection
@@ -1063,16 +1087,23 @@ Your compliance is mandatory.
             vlan 70
                 name Vezetoseg_HR
                 exit
+            vlan 6
+                name Nyomtatok
+                exit
             int g0/1
                 switchport mode trunk
-                switchport trunk allowed vlan 70,99
+                switchport trunk allowed vlan 70,6,99
                 switchport trunk native vlan 99
                 exit
             int range fa0/1-6
                 switchport mode access
                 switchport access vlan 70
                 exit
-            int range fa0/7-24, g0/2
+            int fa0/7
+                switchport mode access
+                switchport access vlan 6
+                exit
+            int range fa0/8-24, g0/2
                 switchport mode access
                 switchport access vlan 100
                 switchport nonegotiate
@@ -1088,9 +1119,12 @@ Your compliance is mandatory.
         #DHCP-snooping
             ip dhcp snooping
             ip dhcp snooping vlan 70
-            ip dhcp snooping information option allow-untrusted
+            no ip dhcp snooping information option
             int range fa0/1-7
                 ip dhcp snooping limit rate 13
+                exit
+            int g0/1
+                ip dhcp snooping trust
                 exit
 
         #ARP inspection
