nyomtato vlan fix

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -914,6 +914,7 @@ Your compliance is mandatory.
                 switchport trunk native vlan 40
             int fa0/2
                 switchport mode access
+                switchport access vlan 6
             int fa0/3
                 switchport mode access
                 switchport access vlan 3
