Site3 ipv6 próba(nem működik)

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -3,7 +3,7 @@
         ena
             conf t
             hostname ISP1
-
+            ipv6 unicast-routing
         #Portok
             int Se0/2/0
                 ip add 200.200.200.5 255.255.255.252
@@ -40,7 +40,7 @@
         ena
             conf t
             hostname ISP2
-
+            ipv6 unicast-routing
         #Portok
             int Se0/2/0
                 ip add 200.200.200.9 255.255.255.252
@@ -77,7 +77,7 @@
         ena
             conf t
             hostname ISP3
-
+            ipv6 unicast-routing
         #Portok
             int Se0/2/0
                 ip add 200.200.200.6 255.255.255.252
@@ -110,6 +110,7 @@
         ena
             conf t
             hostname SITE1x0
+            ipv6 unicast-routing
             license boot module c2900 technology-package securityk9
             enable password cisco
             service password-encryption
@@ -264,6 +265,7 @@
         ena
             conf t
             hostname SITE2x0
+            ipv6 unicast-routing
             license boot module c2900 technology-package securityk9
             enable password cisco
             service password-encryption
@@ -381,6 +383,7 @@
         ena
             conf t
             hostname SITE2x1
+            ipv6 unicast-routing
             license boot module c2900 technology-package securityk9
             enable password cisco
             service password-encryption
@@ -453,6 +456,7 @@
         ena
             conf t
             hostname SITE2x2
+            ipv6 unicast-routing
             license boot module c2900 technology-package securityk9
             enable password cisco
             service password-encryption
@@ -528,6 +532,7 @@ Your compliance is mandatory.
         ena
             conf t
             hostname SITE3
+            ipv6 unicast-routing
             license boot module c2900 technology-package securityk9
             enable password cisco
             service password-encryption
@@ -591,6 +596,20 @@ Your compliance is mandatory.
             ip nat inside source list 1 pool SITE3NAT overload
             access-list 1 permit 192.168.3.0 0.0.0.31
             access-list 1 permit 192.168.3.32 0.0.0.7
+
+        #IPV6
+        int g0/0
+            ipv6 address 2001:db8:10:12::/124
+            ipv6 address FE80::3 link-local
+            exit
+        int g0/1.70
+            ipv6 address 2001:db8:10:13::/125
+            ipv6 address FE80::3 link-local
+            exit
+        int g0/1.6
+            ipv6 address 2001:db8:10:14::/126
+            ipv6 address FE80::3 link-local
+            exit
 
         #TUNNEL 2
             int Tunnel 2
