ipv6 (site1,3) van még mit dolgozni aludni is kéne

--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -216,7 +216,41 @@
                 default-router 192.168.1.49
                 dns-server 8.8.8.8
                 exit
-            #RECEPCIÓ MÉG NINCSEN
+            ip dhcp pool Recepcio
+                net 192.168.1.80 255.255.255.252
+                default-router 192.168.1.81
+                dns-server 8.8.8.8
+                exit
+
+        #IPV6
+            int g0/0.10
+                ipv6 address 2001:db8:10:1::/64
+                ipv6 address FE80::1 link-local
+                exit
+            int g0/0.20
+                ipv6 address 2001:db8:10:2::/64
+                ipv6 address FE80::1 link-local
+                exit
+            int g0/0.30
+                ipv6 address 2001:db8:10:4::/64
+                ipv6 address FE80::1 link-local
+                exit
+            int g0/0.40
+                ipv6 address 2001:db8:10:3::/64
+                ipv6 address FE80::1 link-local
+                exit
+            int g0/0.3
+                ipv6 address 2001:db8:10:5::/64
+                ipv6 address FE80::1 link-local
+                exit
+            int g0/0.5
+                ipv6 address 2001:db8:10:6::/64
+                ipv6 address FE80::1 link-local
+                exit
+            int g0/0.6
+                ipv6 address 2001:db8:10:7::/64
+                ipv6 address FE80::1 link-local
+                exit
 
         #TUNNEL 1
         int Tunnel 1
@@ -599,15 +633,15 @@ Your compliance is mandatory.
 
         #IPV6
         int g0/0
-            ipv6 address 2001:db8:10:12::/124
+            ipv6 address 2001:db8:10:12::/64
             ipv6 address FE80::3 link-local
             exit
         int g0/1.70
-            ipv6 address 2001:db8:10:13::/125
+            ipv6 address 2001:db8:10:13::/64
             ipv6 address FE80::3 link-local
             exit
         int g0/1.6
-            ipv6 address 2001:db8:10:14::/126
+            ipv6 address 2001:db8:10:14::/64
             ipv6 address FE80::3 link-local
             exit
 
@@ -871,9 +905,13 @@ Your compliance is mandatory.
             interface GigabitEthernet0/2
                 ip dhcp snooping limit rate 24
                 exit
-            interface FastEthernet0/1
-                ip dhcp snooping limit rate 3
+            interface range FastEthernet0/1-2
+                ip dhcp snooping limit rate 1
                 exit
+            interface range FastEthernet0/19-24
+                ip dhcp snooping trust
+                exit
+            
 
         #ARP inspection
             ip arp inspection vlan 10,20,30,40,3,5,6
@@ -983,6 +1021,9 @@ Your compliance is mandatory.
                 exit
             int range fa0/1-3
                 ip dhcp snooping limit rate 3
+                exit
+            interface range FastEthernet0/19-24
+                ip dhcp snooping trust
                 exit
 
         #ARP inspection
