--- a/Konfigok.conf
+++ b/Konfigok.conf
@@ -35,6 +35,20 @@
                 area 0 authentication message-digest
             exit
 
+        #IPV6
+            int Se0/2/0
+                ipv6 address 2001:A:B:C::2:1/64
+                exit
+            int Se0/2/1
+                ipv6 address 2001:A:B:D::1:1/64
+                exit
+            int Se0/3/0
+                ipv6 address 2001:A:B:2::2:1/64
+                exit
+            int g0/0
+                ###
+                exit
+
 
     #ISP2
         ena
@@ -72,6 +86,20 @@
                 area 0 authentication message-digest
                 exit
 
+        #IPV6
+            int Se0/2/0
+                ipv6 address 2001:A:B:E::3:1/64
+                exit
+            int Se0/2/1
+                ipv6 address 2001:A:B:D::1:2/64
+                exit
+            int Se0/3/0
+                ipv6 address 2001:A:B:3::3:1/64
+                exit
+            int g0/0
+                ###
+                exit
+
 
     #ISP3
         ena
@@ -101,6 +129,20 @@
                 auto-cost reference-bandwidth 1000
                 passive-interface Se0/3/0
                 area 0 authentication message-digest
+                exit
+        
+        #IPV6
+            int Se0/2/0
+                ipv6 address 2001:A:B:C::2:2/64
+                exit
+            int Se0/2/1
+                ipv6 address 2001:A:B:E::3:2/64
+                exit
+            int Se0/3/0
+                ipv6 address 2001:A:B:1::1:1/64
+                exit
+            int g0/0
+                ###
                 exit
 
 
@@ -368,6 +410,22 @@
             access-list 2 permit 192.168.2.16 0.0.0.7
             access-list 2 permit 192.168.2.24 0.0.0.7
 
+        #IPV6
+            int Se0/3/0
+                ipv6 address 2001:db8:2:1::1/64
+                exit
+            int Se0/3/1
+                ipv6 address 2001:db8:2:1::1/64
+                exit
+            int Se0/2/0
+                ipv6 address 2001:db8:2:3::1/64
+                exit
+
+
+
+
+
+
         #TUNNEL 1
             int Tunnel 1
                 tunnel source Se0/3/0
@@ -484,6 +542,30 @@
             int range g0/0,g0/1.50
                 ip helper-address 192.168.2.241
                 exit
+
+
+        #IPV6
+            int Se0/3/1
+                ipv6 address 2001:db8:2:1::2/64
+                exit
+            int Se0/3/0
+                ipv6 address 2001:db8:2:2::1/64
+                exit
+            int g0/0
+                ipv6 address 2001:db8:10:11::/64
+                ipv6 address FE80::2 link-local
+                exit
+            int g0/1.50
+                ipv6 address 2001:db8:10:8::/64
+                ipv6 address FE80::2 link-local
+                exit
+            int g0/1.60
+                ipv6 address 2001:db8:10:10::/64
+                ipv6 address FE80::2 link-local
+                exit
+            
+
+        
             
 
     #SITE2x2
@@ -561,6 +643,30 @@ Your compliance is mandatory.
             int range g0/0,g0/2.50
                 ip helper-address 192.168.2.245
                 exit
+
+        #IPV6
+        int Se0/3/1
+                ipv6 address 2001:db8:2:2::2/64
+                exit
+            int Se0/3/0
+                ipv6 address 2001:db8:2:3::2/64
+                exit
+            int g0/0
+                ipv6 address 2001:db8:10:9::/64
+                ipv6 address FE80::2 link-local
+                exit
+            int g0/1.50
+                ipv6 address 2001:db8:10:8::/64
+                ipv6 address FE80::2 link-local
+                exit
+            int g0/1.60
+                ipv6 address 2001:db8:10:10::/64
+                ipv6 address FE80::2 link-local
+                exit
+
+
+
+
 
     #SITE3
         ena
