SSH routereknek és switcheknek
SSH elérés a a SITE routereknek és a SITE switcheknek

--- a/Konfigok.config
+++ b/Konfigok.config
@@ -336,6 +336,17 @@
             exit
         access-list 130 permit gre host 40.0.0.2 host 30.0.0.2
 
+    #SSH 
+        ip domain-name stratagem.com
+        crypto gey generate rsa: 2048
+        ip ssh version 2
+        ip ssh authentication-retries 4
+        ip ssh time-out 120
+        username admin password cisco
+        line vty 0 4
+            transport input ssh
+            login local
+            exit
 
     #SITE2x0
         ena
@@ -470,6 +481,17 @@
                 exit
             access-list 120 permit gre host 20.0.0.2 host 30.0.0.2
 
+        #SSH 
+        ip domain-name stratagem.com
+        crypto gey generate rsa: 2048
+        ip ssh version 2
+        ip ssh authentication-retries 4
+        ip ssh time-out 120
+        username admin password cisco
+        line vty 0 4
+            transport input ssh
+            login local
+            exit
 
     #SITE2x1
         ena
@@ -563,7 +585,19 @@
                 ipv6 address 2001:db8:10:10::/64
                 ipv6 address FE80::2 link-local
                 exit
-            
+
+            #SSH 
+            ip domain-name stratagem.com
+            crypto gey generate rsa: 2048
+            ip ssh version 2
+            ip ssh authentication-retries 4
+            ip ssh time-out 120
+            username admin password cisco
+            line vty 0 4
+                transport input ssh
+                login local
+            exit
+
 
         
             
@@ -664,7 +698,17 @@ Your compliance is mandatory.
                 ipv6 address FE80::2 link-local
                 exit
 
-
+            #SSH 
+            ip domain-name stratagem.com
+            crypto gey generate rsa: 2048
+            ip ssh version 2
+            ip ssh authentication-retries 4
+            ip ssh time-out 120
+            username admin password cisco
+            line vty 0 4
+                transport input ssh
+                login local
+            exit
 
 
 
@@ -802,6 +846,17 @@ Your compliance is mandatory.
             exit
         access-list 130 permit gre host 30.0.0.2 host 40.0.0.2
 
+            #SSH 
+            ip domain-name stratagem.com
+            crypto gey generate rsa: 2048
+            ip ssh version 2
+            ip ssh authentication-retries 4
+            ip ssh time-out 120
+            username admin password cisco
+            line vty 0 4
+                transport input ssh
+                login local
+            exit
 
 #----------Switchek-------------
 
@@ -929,7 +984,17 @@ Your compliance is mandatory.
                 switchport port-security mac-address sticky
                 exit
 
-
+            #SSH 
+            ip domain-name stratagem.com
+            crypto gey generate rsa: 2048
+            ip ssh version 2
+            ip ssh authentication-retries 4
+            ip ssh time-out 120
+            username admin password cisco
+            line vty 0 4
+                transport input ssh
+                login local
+            exit
 
     #SW1x2
         ena
@@ -1043,7 +1108,17 @@ Your compliance is mandatory.
                 switchport port-security mac-address sticky
                 exit
 
-
+            #SSH 
+            ip domain-name stratagem.com
+            crypto gey generate rsa: 2048
+            ip ssh version 2
+            ip ssh authentication-retries 4
+            ip ssh time-out 120
+            username admin password cisco
+            line vty 0 4
+                transport input ssh
+                login local
+            exit
 
     #SW1x3
         ena
@@ -1155,7 +1230,17 @@ Your compliance is mandatory.
                 switchport port-security violation restrict
                 switchport port-security mac-address sticky
                 exit
-
+            #SSH 
+            ip domain-name stratagem.com
+            crypto gey generate rsa: 2048
+            ip ssh version 2
+            ip ssh authentication-retries 4
+            ip ssh time-out 120
+            username admin password cisco
+            line vty 0 4
+                transport input ssh
+                login local
+            exit
 
     #SW2
         ena
@@ -1232,7 +1317,18 @@ Your compliance is mandatory.
                 switchport port-security violation restrict
                 switchport port-security mac-address sticky
                 exit
-    
+
+                #SSH 
+            ip domain-name stratagem.com
+            crypto gey generate rsa: 2048
+            ip ssh version 2
+            ip ssh authentication-retries 4
+            ip ssh time-out 120
+            username admin password cisco
+            line vty 0 4
+                transport input ssh
+                login local
+            exit
 
     #SW3
         ena
@@ -1306,7 +1402,17 @@ Your compliance is mandatory.
                 switchport port-security mac-address sticky
                 exit
             
-
+            #SSH 
+            ip domain-name stratagem.com
+            crypto gey generate rsa: 2048
+            ip ssh version 2
+            ip ssh authentication-retries 4
+            ip ssh time-out 120
+            username admin password cisco
+            line vty 0 4
+                transport input ssh
+                login local
+            exit
 
 
 
