--- a/Konfigok.config
+++ b/Konfigok.config
@@ -338,7 +338,8 @@
 
     #SSH 
         ip domain-name stratagem.com
-        crypto gey generate rsa: 2048
+        crypto key generate rsa
+        4096
         ip ssh version 2
         ip ssh authentication-retries 4
         ip ssh time-out 120
@@ -483,7 +484,8 @@
 
         #SSH 
         ip domain-name stratagem.com
-        crypto gey generate rsa: 2048
+        crypto key generate rsa
+        4096
         ip ssh version 2
         ip ssh authentication-retries 4
         ip ssh time-out 120
@@ -588,7 +590,8 @@
 
             #SSH 
             ip domain-name stratagem.com
-            crypto gey generate rsa: 2048
+            crypto key generate rsa
+            4096
             ip ssh version 2
             ip ssh authentication-retries 4
             ip ssh time-out 120
@@ -596,7 +599,7 @@
             line vty 0 4
                 transport input ssh
                 login local
-            exit
+                exit
 
 
         
@@ -700,7 +703,8 @@ Your compliance is mandatory.
 
             #SSH 
             ip domain-name stratagem.com
-            crypto gey generate rsa: 2048
+            crypto key generate rsa
+            4096
             ip ssh version 2
             ip ssh authentication-retries 4
             ip ssh time-out 120
@@ -708,7 +712,7 @@ Your compliance is mandatory.
             line vty 0 4
                 transport input ssh
                 login local
-            exit
+                exit
 
 
 
@@ -846,9 +850,10 @@ Your compliance is mandatory.
             exit
         access-list 130 permit gre host 30.0.0.2 host 40.0.0.2
 
-            #SSH 
+        #SSH 
             ip domain-name stratagem.com
-            crypto gey generate rsa: 2048
+            crypto key generate rsa
+            4096
             ip ssh version 2
             ip ssh authentication-retries 4
             ip ssh time-out 120
@@ -856,7 +861,7 @@ Your compliance is mandatory.
             line vty 0 4
                 transport input ssh
                 login local
-            exit
+                exit
 
 #----------Switchek-------------
 
@@ -984,9 +989,15 @@ Your compliance is mandatory.
                 switchport port-security mac-address sticky
                 exit
 
-            #SSH 
+        #SSH
+            int vlan 40
+                ip address 192.168.1.60 255.255.255.240
+                no sh
+                exit
+            ip default-gateway 192.168.1.1
             ip domain-name stratagem.com
-            crypto gey generate rsa: 2048
+            crypto key generate rsa
+            4096
             ip ssh version 2
             ip ssh authentication-retries 4
             ip ssh time-out 120
@@ -994,7 +1005,7 @@ Your compliance is mandatory.
             line vty 0 4
                 transport input ssh
                 login local
-            exit
+                exit
 
     #SW1x2
         ena
@@ -1108,9 +1119,15 @@ Your compliance is mandatory.
                 switchport port-security mac-address sticky
                 exit
 
-            #SSH 
+        #SSH
+            int vlan 40
+                ip address 192.168.1.61 255.255.255.240
+                no sh
+                exit
+            ip default-gateway 192.168.1.1
             ip domain-name stratagem.com
-            crypto gey generate rsa: 2048
+            crypto key generate rsa
+            4096
             ip ssh version 2
             ip ssh authentication-retries 4
             ip ssh time-out 120
@@ -1118,7 +1135,7 @@ Your compliance is mandatory.
             line vty 0 4
                 transport input ssh
                 login local
-            exit
+                exit
 
     #SW1x3
         ena
@@ -1230,9 +1247,16 @@ Your compliance is mandatory.
                 switchport port-security violation restrict
                 switchport port-security mac-address sticky
                 exit
-            #SSH 
+            
+        #SSH
+            int vlan 40
+                ip address 192.168.1.62 255.255.255.240
+                no sh
+                exit
+            ip default-gateway 192.168.1.1
             ip domain-name stratagem.com
-            crypto gey generate rsa: 2048
+            crypto key generate rsa
+            4096
             ip ssh version 2
             ip ssh authentication-retries 4
             ip ssh time-out 120
@@ -1240,7 +1264,7 @@ Your compliance is mandatory.
             line vty 0 4
                 transport input ssh
                 login local
-            exit
+                exit
 
     #SW2
         ena
@@ -1318,9 +1342,11 @@ Your compliance is mandatory.
                 switchport port-security mac-address sticky
                 exit
 
-                #SSH 
+        #SSH
+            ip default-gateway 192.168.2.1
             ip domain-name stratagem.com
-            crypto gey generate rsa: 2048
+            crypto key generate rsa
+            4096
             ip ssh version 2
             ip ssh authentication-retries 4
             ip ssh time-out 120
@@ -1328,7 +1354,7 @@ Your compliance is mandatory.
             line vty 0 4
                 transport input ssh
                 login local
-            exit
+                exit
 
     #SW3
         ena
@@ -1402,9 +1428,14 @@ Your compliance is mandatory.
                 switchport port-security mac-address sticky
                 exit
             
-            #SSH 
+        #SSH
+            int vlan 70
+                ip address 192.168.3.38 255.255.255.248
+                no sh
+            ip default-gateway 192.168.3.1
             ip domain-name stratagem.com
-            crypto gey generate rsa: 2048
+            crypto key generate rsa
+            4096
             ip ssh version 2
             ip ssh authentication-retries 4
             ip ssh time-out 120
@@ -1412,7 +1443,7 @@ Your compliance is mandatory.
             line vty 0 4
                 transport input ssh
                 login local
-            exit
+                exit
 
 
 
