ssh fix + dhcp excluded address

--- a/Konfigok.config
+++ b/Konfigok.config
@@ -238,6 +238,9 @@
             access-list 1 permit 192.168.1.96 0.0.0.7
 
         #DHCP
+            ip dhcp excluded-address 192.168.1.60
+            ip dhcp excluded-address 192.168.1.61
+            ip dhcp excluded-address 192.168.1.62
             ip dhcp pool Programozok
                 net 192.168.1.0 255.255.255.224
                 default-router 192.168.1.1
@@ -398,6 +401,7 @@
             ip route 0.0.0.0 0.0.0.0 20.0.0.1
 
         #DHCP
+            ip dhcp excluded-address 192.168.2.14
             ip dhcp pool Szerver_felho
                 net 192.168.2.0 255.255.255.240
                 default-router 192.168.2.1
@@ -758,6 +762,7 @@ Your compliance is mandatory.
                 exit
 
         #DHCP
+            ip dhcp excluded-address 192.168.3.38
             ip dhcp pool Community_Marketing
                 net 192.168.3.0 255.255.255.224
                 default-router 192.168.3.1
@@ -1343,6 +1348,10 @@ Your compliance is mandatory.
                 exit
 
         #SSH
+            int vlan 50
+                ip address 192.168.2.14 255.255.255.240
+                no sh
+                exit
             ip default-gateway 192.168.2.1
             ip domain-name stratagem.com
             crypto key generate rsa
