--- a/Konfigok.config
+++ b/Konfigok.config
@@ -297,6 +297,43 @@
                 ipv6 address FE80::1 link-local
                 exit
 
+        #NETFLOW
+        int Se0/3/0
+            ip flow ingress
+            ip flow egress
+        int g0/0
+            ip flow ingress
+            ip flow egress
+        int g0/0.10
+            ip flow ingress
+            ip flow egress
+            exit
+        int g0/0.20
+            ip flow ingress
+            ip flow egress
+            exit
+        int g0/0.30
+            ip flow ingress
+            ip flow egress
+            exit
+        int g0/0.40
+            ip flow ingress
+            ip flow egress
+            exit
+        int g0/0.3
+            ip flow ingress
+            ip flow egress
+            exit
+        int g0/0.5
+            ip flow ingress
+            ip flow egress
+            exit
+        int g0/0.6
+            ip flow ingress
+            ip flow egress
+            exit
+        ip flow-export version 9
+
         #TUNNEL 1
         int Tunnel 1
             tunnel source Se0/3/0
@@ -437,10 +474,18 @@
                 ipv6 address 2001:db8:2:3::1/64
                 exit
 
-
-
-
-
+        #NETFLOW
+        int Se0/3/0
+            ip flow ingress
+            ip flow egress
+        int Se0/3/1
+            ip flow ingress
+            ip flow egress
+        int Se0/2/0
+            ip flow ingress
+            ip flow egress
+        exit
+        ip flow-export version 9
 
         #TUNNEL 1
             int Tunnel 1
@@ -592,6 +637,26 @@
                 ipv6 address FE80::2 link-local
                 exit
 
+        #NETFLOW
+            int Se0/3/0
+                ip flow ingress
+                ip flow egress
+            int Se0/3/1
+                ip flow ingress
+                ip flow egress
+            int g0/0
+                ip flow ingress
+                ip flow egress
+            int g0/1.50
+                ip flow ingress
+                ip flow egress
+            int g0/1.60
+                ip flow ingress
+                ip flow egress
+                exit
+            ip flow-export version 9
+
+
             #SSH 
             ip domain-name stratagem.com
             crypto key generate rsa
@@ -705,6 +770,27 @@ Your compliance is mandatory.
                 ipv6 address FE80::2 link-local
                 exit
 
+
+        #NETFLOW
+            int Se0/3/0
+                ip flow ingress
+                ip flow egress
+            int Se0/3/1
+                ip flow ingress
+                ip flow egress
+            int g0/0
+                ip flow ingress
+                ip flow egress
+            int g0/2.50
+                ip flow ingress
+                ip flow egress
+            int g0/2.60
+                ip flow ingress
+                ip flow egress
+                exit
+            ip flow-export version 9
+
+
             #SSH 
             ip domain-name stratagem.com
             crypto key generate rsa
@@ -803,6 +889,21 @@ Your compliance is mandatory.
             ipv6 address 2001:db8:10:14::/64
             ipv6 address FE80::3 link-local
             exit
+
+
+        #NETFLOW
+            int Se0/3/0
+            ip flow ingress
+            ip flow egress
+            int g0/0
+            ip flow ingress
+            ip flow egress
+            int g0/1.70
+            ip flow ingress
+            ip flow egress
+            exit
+            ip flow-export version 9
+            
 
         #TUNNEL 2
             int Tunnel 2
