IPv6 forgalomiranyitas SITE2

--- a/Konfigok.config
+++ b/Konfigok.config
@@ -470,7 +470,7 @@
 
         #IPV6
             int Se0/3/0
-                ipv6 address 2001:db8:2:1::1/64
+                ipv6 address 2001:db8:2:2::1/64
                 exit
             int Se0/3/1
                 ipv6 address 2001:db8:2:1::1/64
@@ -478,6 +478,18 @@
             int Se0/2/0
                 ipv6 address 2001:db8:2:3::1/64
                 exit
+
+        #IPv6 forgalomirányítás
+            ipv6 router ospf 1
+                router-id 2.0.0.0
+                exit
+            int Se0/3/1
+                ipv6 ospf 1 area 0
+                exit
+            int Se0/2/0
+                ipv6 ospf 1 area 0
+                exit
+
 
         #NETFLOW
             int Se0/3/0
@@ -642,6 +654,26 @@
                 ipv6 address FE80::2 link-local
                 exit
 
+        #IPV6 Forgalomirányítás
+            ipv6 router ospf 1
+                router-id 2.0.0.1
+                exit
+            int Se0/3/1
+                ipv6 ospf 1 area 0
+                exit
+            int Se0/3/0
+                ipv6 ospf 1 area 0
+                exit
+            interface g0/0
+                ipv6 ospf 1 area 0
+                exit
+            int g0/1.50
+                ipv6 ospf 1 area 0
+                exit
+            int g0/1.60
+                ipv6 ospf 1 area 0
+                exit  
+
         #NETFLOW
             int Se0/3/0
                 ip flow ingress
@@ -762,13 +794,33 @@
                 ipv6 address 2001:db8:10:9::/64
                 ipv6 address FE80::2 link-local
                 exit
-            int g0/1.50
+            int g0/2.50
                 ipv6 address 2001:db8:10:8::/64
                 ipv6 address FE80::2 link-local
                 exit
-            int g0/1.60
+            int g0/2.60
                 ipv6 address 2001:db8:10:10::/64
                 ipv6 address FE80::2 link-local
+                exit
+
+        #IPV6 Forgalomirányítás
+            ipv6 router ospf 1
+                router-id 2.0.0.2
+                exit
+            int Se0/3/1
+                ipv6 ospf 1 area 0
+                exit
+            int Se0/3/0
+                ipv6 ospf 1 area 0
+                exit
+            interface g0/0
+                ipv6 ospf 1 area 0
+                exit
+            int g0/2.50
+                ipv6 ospf 1 area 0
+                exit
+            int g0/2.60
+                ipv6 ospf 1 area 0
                 exit
 
         #NETFLOW
