--- a/Konfigok.config
+++ b/Konfigok.config
@@ -337,6 +337,8 @@
                 ip flow egress
                 exit
             ip flow-export version 9
+            snmp-server community cisco rw
+            logging 192.168.1.74
 
         #TUNNEL 1
             int Tunnel 1
@@ -490,7 +492,6 @@
                 ipv6 ospf 1 area 0
                 exit
 
-
         #NETFLOW
             int Se0/3/0
                 ip flow ingress
@@ -503,6 +504,8 @@
                 ip flow egress
             exit
             ip flow-export version 9
+            snmp-server community cisco rw
+            logging 192.168.2.29
 
         #TUNNEL 1
             int Tunnel 1
@@ -692,6 +695,8 @@
                 ip flow egress
                 exit
             ip flow-export version 9
+            snmp-server community cisco rw
+            logging 192.168.2.29
 
             #SSH 
             ip domain-name stratagem.com
@@ -841,6 +846,8 @@
                 ip flow egress
                 exit
             ip flow-export version 9
+            snmp-server community cisco rw
+            logging 192.168.2.29
 
         #SSH 
             ip domain-name stratagem.com
@@ -1163,6 +1170,10 @@
                 login local
                 exit
 
+        #MONITORING
+            snmp-server community cisco rw
+            logging 192.168.1.74
+
 
     #SW1x2
         ena
@@ -1292,6 +1303,10 @@
                 transport input ssh
                 login local
                 exit
+
+        #MONITORING
+            snmp-server community cisco rw
+            logging 192.168.1.74
 
 
     #SW1x3
@@ -1423,6 +1438,10 @@
                 login local
                 exit
 
+        #MONITORING
+            snmp-server community cisco rw
+            logging 192.168.1.74
+
 
     #SW2
         ena
@@ -1517,6 +1536,10 @@
                 transport input ssh
                 login local
                 exit
+
+        #MONITORING
+            snmp-server community cisco rw
+            logging 192.168.1.74
 
 
     #SW3
