dhcp snooping fix

--- a/Konfigok.config
+++ b/Konfigok.config
@@ -1387,7 +1387,7 @@
                 ip dhcp snooping limit rate 20
                 exit
             int g0/2
-                ip dhcp snooping limit rate 24
+                ip dhcp snooping trust
                 exit
             int range fa0/1-3
                 ip dhcp snooping limit rate 3
