SW1x1 dhcp snooping

--- a/Konfigok.config
+++ b/Konfigok.config
@@ -270,6 +270,11 @@
                 default-router 192.168.1.81
                 dns-server 8.8.8.8
                 exit
+            ip dhcp pool APs
+                net 192.168.1.84 255.255.255.248
+                default-router 192.168.1.85
+                dns-server 8.8.8.8
+                exit
 
         #IPV6
             int g0/0.10
@@ -1122,6 +1127,9 @@
             ip dhcp snooping vlan 10,20,30,40,3,5,6
             no ip dhcp snooping information option
             interface GigabitEthernet0/1
+                ip dhcp snooping trust
+                exit
+            interface range Fa0/19-24
                 ip dhcp snooping trust
                 exit
             interface GigabitEthernet0/2
